fixed KPI delete functionality
